--- a/style.css
+++ b/style.css
@@ -10,7 +10,38 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    padding: 0 35px;
     background: linear-gradient(to right bottom, rgb(244, 83, 99), pink )
+}
+
+.container {
+    max-width: 100vw;
+    width: 100%;
+}
+
+.carousel {
+    display: grid;
+    grid-auto-flow: column;
+    gap: 16px;
+    overflow: hidden;
+    justify-content: center;
+}
+
+.card {
+    width: 250px;
+    height: 400px;
+    background-color: beige;
+    border-radius: 20px;
+    list-style: none;
+}
+.card img {
+    display: block;
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    object-position: center;
+    margin-bottom: 20px;
+    border-radius: 20px 20px 0 0;
 }
 
 
