--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Geist";
 }
 
 body {
@@ -11,7 +10,10 @@ body {
     align-items: center;
     height: 100vh;
     padding: 0 35px;
-    background: linear-gradient(to right bottom, rgb(244, 83, 99), pink )
+    background: linear-gradient(to right bottom, rgb(244, 83, 99), pink);
+    font-family: "Geist";
+    font-size: 15px;
+    font-weight: 300;
 }
 
 .container {
@@ -33,16 +35,32 @@ body {
     background-color: beige;
     border-radius: 20px;
     list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 .card img {
     display: block;
     width: 100%;
-    height: 250px;
+    height: 100%;
     object-fit: cover;
     object-position: center;
-    margin-bottom: 20px;
-    border-radius: 20px 20px 0 0;
 }
+
+.card .text {
+    position: absolute;
+    background: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0.698), rgba(0, 0, 0, 0));
+    padding: 20px;
+    bottom: 0;
+    color: beige;
+}
+
+h3 {
+    margin-bottom: 10px;
+}
+
 
 
 
